objects/copadovsm__Value_Stream_Map_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>copadovsm__DataJson__c</fullName>
        <label>DataJson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadovsm__Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>copadovsm__Filter__c</referenceTo>
        <relationshipLabel>Value Stream Map Snapshots</relationshipLabel>
        <relationshipName>Value_Stream_Map_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadovsm__Snapshot_Execution_Time__c</fullName>
        <label>Snapshot Execution Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadovsm__Value_Stream_Map__c</fullName>
        <label>Value Stream Map</label>
        <referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
        <relationshipLabel>Value Stream Map Snapshots</relationshipLabel>
        <relationshipName>Value_Stream_Map_Snapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Value Stream Map Snapshot</label>
    <nameField>
        <displayFormat>SN-{0000000000}</displayFormat>
        <label>Value Stream Map Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Stream Map Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>